# ci-tooling

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .trufflehog-exclude-paths.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  mkdocs.yml  pyproject.toml  wrknv.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: .trigger  .trigger2  .trigger3  ci.yml  ci.yml.disabled  python-ci.yml  python-release.yml  python-security.yml  test-actions.yml  test-minimal.yml  test-reusable.yml  test-reusable.yml.disabled  trigger.txt
.provide/: E2E_TEST_FIX_RESULTS.md  E2E_TEST_RESULTS.md  HANDOFF.md
actions/build-psp/: action.yml
actions/build-psp/scripts/: build.sh
actions/generate-post-version/: README.md  action.yml
actions/generate-testpypi-version/: README.md  action.yml
actions/github-release/: action.yml
actions/parse-org-helpers/: action.yml
actions/python-build/: action.yml
actions/python-build-release/: README.md  action.yml
actions/python-ci/: action.yml
actions/python-quality/: action.yml
actions/python-release/: action.yml
actions/python-security/: action.yml
actions/python-test/: action.yml
actions/run-ci-tasks/: action.yml
actions/run-ci-tasks/scripts/: run.sh
actions/setup-github-auth/: README.md  action.yml
actions/setup-python-env/: action.yml
ci_tooling.egg-info/: PKG-INFO  SOURCES.txt
configs/: cliff-vocabulary.toml  cliff.toml  pre-commit-config.yaml
docs/: ci-monitoring-patterns.md  ci-orchestrator-design.md  index.md  pre-commit-hooks.md
docs/actions/: index.md  python-ci.md  python-release.md  setup-python-env.md
docs/getting-started/: installation.md  quick-start.md
docs/js/: custom.js  mermaid-init.js  termynal.js
docs/workflows/: index.md  python-ci.md  python-release.md
examples/: test_basic.py
scripts/: add_spdx_headers.py  extract_package_name.py  extract_version.py  generate-changelogs.sh  migrate-workflow.py  update-action-versions.py  validate_spdx_headers.py
scripts/quality/: run-mypy.sh  run-ruff-format.sh  run-ruff-lint.sh
scripts/release/: resolve-tag-version.sh  verify-testpypi.sh
scripts/release-scrubbing/: README.md  align-jsonl.py  match-all-summaries.py  scan-paths.py  scan-release-sensitive.py  verify-all-purged.py  verify-all-shas.py
scripts/security/: run-bandit.sh  run-pip-audit.sh
scripts/test/: run-pytest.sh
src/provide/: __init__.py
src/provide/cicd/: __init__.py  config_check.py  conform.py
tasks/python/: ci.toml
templates/: ci-python.yml.jinja  ci-python.yml.tmpl  standard-ci.yml  standard-release.yml  wrknv-python.toml.jinja  wrknv-python.toml.tmpl
templates/basic-python/.github/workflows/: ci.yml  release.yml
tests/: __init__.py  conftest.py  test_config_check.py  test_conform.py
versions/: action-versions.yml
workflows/: python-ci.yml  python-release.yml
