# SPDX-FileCopyrightText: Copyright (c) 2026 provide.io llc. All rights reserved.
# SPDX-License-Identifier: MIT

# CI Tooling - GitHub Actions only (no Python package)
# The Python CLI tools (conform, config-check) have been moved to wrknv.

# Minimal [project] section required for uv sync in test workflows
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []

[project]
name = "ci-tooling"
version = "0.1.0"
description = "CI/CD tooling and reusable GitHub Actions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "provide.io", email = "code@provide.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/provide-io/ci-tooling"
Repository = "https://github.com/provide-io/ci-tooling"
Issues = "https://github.com/provide-io/ci-tooling/issues"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

# This pyproject.toml is kept for tool configurations used by the examples/tests.

[tool.ruff]
line-length = 111
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "C90", "SIM", "PTH", "RUF"]
ignore = ["ANN401", "B008", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
